--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.22.3",
     "axios": "^1.7.9",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
+    "jspdf-autotable": "^3.8.4",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "resolve": "^1.22.10",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
