--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.15.0",
     "resolve": "^1.22.10",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
