--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.22.3",
+    "antd-img-crop": "^4.24.0",
     "axios": "^1.7.9",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
@@ -16,6 +17,7 @@
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.2.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
