--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.9",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "http-proxy-middleware": "^3.0.3",
     "jspdf-autotable": "^3.8.4",
     "moment": "^2.30.1",
     "react": "^18.3.1",
